SideNav, working prototype with proper content display

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,7 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<div class="overflow-hidden h-100 w-100">
-  <side-nav></side-nav>
-
+<side-nav>
   <content-manager></content-manager>
-</div>
+</side-nav>
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 
