--- a/src/app/shared/scss/variables.scss
+++ b/src/app/shared/scss/variables.scss
@@ -3,3 +3,7 @@ $nav-item-color-darker: #2f4255;
 $nav-brand-color: #0f5ca8;
 $nav-title-color: #1966b2;
 $nav-custom-icon-color: #3289e6;
+$app-color: #e9f0f5;
+
+$nav-side-width: 17.25rem; // 276px
+$nav-side-width-sm: 4rem; // 64px
