ContentManager: basic setup

--- a/src/app/content-manager/content-manager.component.html
+++ b/src/app/content-manager/content-manager.component.html
@@ -1,1 +1,66 @@
-<p>content manager works!</p>
+<div>
+  <div>
+    <h3>Contacts</h3>
+    <p>Total Count: 4313</p>
+  </div>
+  <div>
+    <button><fa-icon [icon]="" [fixedWidth]="true"></fa-icon> Remove Test Contacts</button>
+    <button><fa-icon [icon]="" [fixedWidth]="true"></fa-icon> Help</button>
+  </div>
+</div>
+
+<div class="card">
+  <div>
+    <div class="input-group">
+      <input type="text" class="form-control" placeholder="" aria-label="">
+      <div class="input-group-append">
+        <button class="btn btn-outline-secondary" type="button">Search</button>
+      </div>
+    </div>
+
+    <div>
+      <button><<</button>
+      <button><</button>
+      <div><input type="text"> of 87</div>
+      <button>></button>
+      <button>>></button>
+    </div>
+  </div>
+
+  <table class="table table-striped w-100">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">First</th>
+        <th scope="col">Last</th>
+        <th scope="col">Handle</th>
+      </tr>
+      <tr>
+        <th scope="col"><input type="text"></th>
+        <th scope="col"><input type="text"></th>
+        <th scope="col"><input type="text"></th>
+        <th scope="col"><input type="text"></th>
+      </tr>
+    </thead>
+    <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Jacob</td>
+      <td>Thornton</td>
+      <td>@fat</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Larry</td>
+      <td>the Bird</td>
+      <td>@twitter</td>
+    </tr>
+    </tbody>
+  </table>
+</div>
