--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -142,7 +142,7 @@
         </li>
       </ul>
     </nav>
-    <div class="pl-1 {{!largeMenuCondensed ? 'm-275px' : 'm-65px'}}">
+    <div class="pl-1 {{!largeMenuCondensed ? 'm-275px' : 'm-65px'}} w-100">
       <ng-content></ng-content>
     </div>
   </div>
