--- a/src/app/contact-manager/contact-manager.component.html
+++ b/src/app/contact-manager/contact-manager.component.html
@@ -1,11 +1,11 @@
-<div>
-  <div>
-    <h3>Contacts</h3>
-    <p>Total Count: 4313</p>
+<div class="d-flex justify-content-between">
+  <div class="d-flex align-items-center">
+    <h3 class="mr-4">Contacts</h3>
+    <span>Total Count: 4313</span>
   </div>
   <div>
-    <button><fa-icon [icon]="" [fixedWidth]="true"></fa-icon> Remove Test Contacts</button>
-    <button><fa-icon [icon]="" [fixedWidth]="true"></fa-icon> Help</button>
+    <button class="btn btn-danger mr-2"><fa-icon [icon]="" [fixedWidth]="true"></fa-icon> Remove Test Contacts</button>
+    <button class="btn btn-dark"><fa-icon [icon]="" [fixedWidth]="true"></fa-icon> Help</button>
   </div>
 </div>
 
@@ -19,6 +19,8 @@
     </div>
 
     <div>
+      <button class="btn btn-success">Add Contacts</button>
+
       <button><<</button>
       <button><</button>
       <div><input type="text"> of 87</div>
