--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~bootstrap/dist/css/bootstrap.css";
-@import "src/app/shared/scss/variables.scss";
+@import "~bootstrap/scss/bootstrap";
+@import "~src/app/shared/scss/variables";
 
 html, body {
   height: 100%;
