ContactTable: working w-100 w/ layout fixed. better view

--- a/src/app/contact-manager/contact-manager.component.scss
+++ b/src/app/contact-manager/contact-manager.component.scss
@@ -7,6 +7,11 @@
 @import "~src/app/shared/scss/aria";
 @import "~src/app/shared/scss/mobile-mixins";
 @import "~src/app/shared/scss/variables";
+
 .w-15 {
   width: 25%;
+}
+
+.table {
+  table-layout: fixed;
 }
