--- a/src/app/contact-manager/contact-manager.component.html
+++ b/src/app/contact-manager/contact-manager.component.html
@@ -52,39 +52,49 @@
   </div>
 
   <table class="table table-striped w-100">
+    <colgroup span="8">
+      <col style="width: 12.5%;">
+      <col style="width: 12.5%;">
+      <col style="width: 12.5%;">
+      <col style="width: 12.5%;">
+      <col style="width: 12.5%;">
+      <col style="width: 12.5%;">
+      <col style="width: 12.5%;">
+      <col style="width: 12.5%;">
+    </colgroup>
     <thead>
       <tr>
-        <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Handle</th>
+        <th scope="col"></th>
+        <th scope="col">Initial</th>
+        <th scope="col">Date</th>
+        <th scope="col">Name</th>
+        <th scope="col">Email</th>
+        <th scope="col">Phone</th>
+        <th scope="col">Source</th>
+        <th scope="col"></th>
       </tr>
       <tr>
-        <th scope="col"><input type="text"></th>
-        <th scope="col"><input type="text"></th>
-        <th scope="col"><input type="text"></th>
-        <th scope="col"><input type="text"></th>
+        <th scope="col"><button class="btn"><fa-icon [icon]="uncheckedIcon" size="lg"></fa-icon></button></th>
+        <th scope="col"><input class="form-control" type="text"></th>
+        <th scope="col"><input class="form-control" type="text"></th>
+        <th scope="col"><input class="form-control" type="text"></th>
+        <th scope="col"><input class="form-control" type="text"></th>
+        <th scope="col"><input class="form-control" type="text"></th>
+        <th scope="col"><input class="form-control" type="text"></th>
+        <th scope="col"></th>
       </tr>
     </thead>
     <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>@twitter</td>
-    </tr>
+      <tr>
+        <th scope="row"><button class="btn"><fa-icon [icon]="uncheckedIcon" size="lg"></fa-icon></button></th>
+        <td>Quote</td>
+        <td>12/15/2020</td>
+        <td>Todd Shea</td>
+        <td>tshea@apple.com</td>
+        <td>5128884444</td>
+        <td>Organic: google.com </td>
+        <td></td>
+      </tr>
     </tbody>
   </table>
 </div>
