Table: responsive mobile design

--- a/src/app/app-nav/app-nav.component.html
+++ b/src/app/app-nav/app-nav.component.html
@@ -142,7 +142,7 @@
         </li>
       </ul>
     </nav>
-    <div class="px-4 pt-2 {{!largeMenuCondensed ? 'm-275px' : 'm-65px'}} w-100">
+    <div class="px-0 px-md-4 pt-2 {{!largeMenuCondensed ? 'm-275px' : 'm-65px'}} w-100">
       <ng-content></ng-content>
     </div>
   </div>
