--- a/src/app/shared/components/custom-checkbox/custom-checkbox.component.html
+++ b/src/app/shared/components/custom-checkbox/custom-checkbox.component.html
@@ -1,4 +1,4 @@
-<div class="w-100 text-center"
+<span class="w-100 text-center custom-checkbox"
      (click)="toggle()"
      tabindex="0"
      appAriaSelect
@@ -8,4 +8,4 @@
            [fixedWidth]="true"
            size="lg">
   </fa-icon>
-</div>
+</span>
