ContactTable: sort icons

--- a/src/app/contact-manager/contact-manager.component.html
+++ b/src/app/contact-manager/contact-manager.component.html
@@ -57,24 +57,48 @@
 
   <table class="table table-striped w-100">
     <colgroup span="8" class="d-none-mx-sm">
-      <col style="width: 6%;">
       <col style="width: 12.5%;">
       <col style="width: 12.5%;">
       <col style="width: 12.5%;">
       <col style="width: 12.5%;">
       <col style="width: 12.5%;">
       <col style="width: 12.5%;">
-      <col style="width: 6%;">
+      <col style="width: 12.5%;">
+      <col style="width: 12.5%;">
     </colgroup>
     <thead class="d-none-mx-sm">
       <tr>
         <th scope="col"><span class="sr-only">Select All</span></th>
-        <th scope="col">Initial</th>
-        <th scope="col">Date</th>
-        <th scope="col">Name</th>
-        <th scope="col">Email</th>
-        <th scope="col">Phone</th>
-        <th scope="col">Source</th>
+        <th scope="col">
+          <div class="d-flex justify-content-between">
+            <span>Initial</span><app-sort-icon></app-sort-icon>
+          </div>
+        </th>
+        <th scope="col">
+          <div class="d-flex justify-content-between">
+            <span>Date</span><app-sort-icon></app-sort-icon>
+          </div>
+        </th>
+        <th scope="col">
+          <div class="d-flex justify-content-between">
+            <span>Name</span><app-sort-icon></app-sort-icon>
+          </div>
+        </th>
+        <th scope="col">
+          <div class="d-flex justify-content-between">
+            <span>Email</span><app-sort-icon></app-sort-icon>
+          </div>
+        </th>
+        <th scope="col">
+          <div class="d-flex justify-content-between">
+            <span>Phone</span><app-sort-icon></app-sort-icon>
+          </div>
+        </th>
+        <th scope="col">
+          <div class="d-flex justify-content-between">
+            <span>Source</span><app-sort-icon></app-sort-icon>
+          </div>
+        </th>
         <th scope="col"><span class="sr-only">Actions</span></th>
       </tr>
       <tr>
